--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
         // CONFIGURATION & SUPABASE SETUP
         // ====================================================================
         
-        // --- REPLACE THESE WITH YOUR SUPABASE KEYS ---
-        const SUPABASE_URL = 'https://YOUR_PROJECT_ID.supabase.co'; 
-        const SUPABASE_ANON_KEY = 'YOUR_ANON_KEY'; 
+        // --- YOUR ACTUAL KEYS FROM BACKEND.JS ---
+        const SUPABASE_URL = 'https://onpwkocasxwimhubimny.supabase.co'; 
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9ucHdrb2Nhc3h3aW1odWJpbW55Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM5OTQ4MTUsImV4cCI6MjA3OTU3MDgxNX0.fnYZfulWBgNUKVD8SmF_hi0lMoXG-hbQlb0bBNl2Mg4'; 
 
         const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
