--- a/index.html
+++ b/index.html
@@ -712,16 +712,48 @@
                             </TransitionWrapper>
 
                             <TransitionWrapper isVisible={view === 'legal'}>
-                                <div className="w-full pt-8"><div className="text-center mb-20"><h2 className="text-6xl md:text-8xl font-black text-white mb-8 uppercase tracking-tight">Legal & Enforcement</h2><p className="text-slate-400 text-2xl">Direct encrypted line to authorities and AI-powered rights assistance.</p></div>
+                                <div className="w-full pt-8">
+                                    <div className="text-center mb-20"><h2 className="text-6xl md:text-8xl font-black text-white mb-8 uppercase tracking-tight">Legal & Enforcement</h2><p className="text-slate-400 text-2xl">Direct encrypted line to authorities and AI-powered rights assistance.</p></div>
                                     <div className="grid grid-cols-1 lg:grid-cols-2 gap-16">
                                         <div className="space-y-10">
-                                            <div className="glass-card p-12 rounded-[3rem] border-l-8 border-rose-500 relative overflow-hidden group hover:bg-white/5 transition-colors shadow-2xl">
-                                                <div className="absolute top-0 right-0 w-80 h-80 bg-rose-500/10 rounded-full blur-[100px] group-hover:bg-rose-500/20 transition-colors"></div>
-                                                <div className="relative z-10"><div className="flex justify-between items-start mb-10"><div><h3 className="text-5xl font-bold text-white tracking-tight">Emergency Dispatch</h3><p className="text-slate-400 text-sm mt-4 font-mono tracking-widest uppercase">Priority Line: 112</p></div><div className="p-6 bg-rose-500/20 rounded-3xl"><Icons.Siren className="w-12 h-12 text-rose-500" /></div></div><button className="shimmer w-full bg-gradient-to-r from-rose-600 to-rose-800 hover:from-rose-500 hover:to-rose-700 text-white py-8 rounded-3xl font-black text-2xl shadow-[0_0_50px_rgba(225,29,72,0.4)] flex items-center justify-center gap-5 transition-all hover:scale-[1.02] active:scale-95"><Icons.Phone className="w-8 h-8 animate-pulse" /> INITIATE CALL</button></div>
+                                            {/* Emergency Dispatch Card */}
+                                            <div className="glass-panel p-10 rounded-[2.5rem] border border-white/10 relative overflow-hidden group hover:border-rose-500/50 transition-all duration-300">
+                                                <div className="absolute inset-0 bg-rose-500/5 group-hover:bg-rose-500/10 transition-colors"></div>
+                                                <div className="relative z-10">
+                                                    <div className="flex justify-between items-start mb-8">
+                                                        <div>
+                                                            <h3 className="text-4xl font-bold text-white tracking-tight">Emergency Dispatch</h3>
+                                                            <p className="text-rose-400 text-sm mt-2 font-mono tracking-widest uppercase font-bold">Priority Line: 112</p>
+                                                        </div>
+                                                        <div className="p-5 bg-rose-500/20 rounded-2xl border border-rose-500/30 shadow-[0_0_15px_rgba(225,29,72,0.3)]">
+                                                            <Icons.Siren className="w-10 h-10 text-rose-500" />
+                                                        </div>
+                                                    </div>
+                                                    <button className="w-full py-6 rounded-2xl bg-gradient-to-r from-rose-600 to-rose-700 hover:from-rose-500 hover:to-rose-600 text-white font-black text-xl shadow-lg shadow-rose-900/40 flex items-center justify-center gap-4 transition-all hover:scale-[1.02] active:scale-95 group/btn">
+                                                        <Icons.Phone className="w-6 h-6 animate-pulse" /> 
+                                                        <span>INITIATE CALL</span>
+                                                    </button>
+                                                </div>
                                             </div>
-                                            <div className="glass-card p-12 rounded-[3rem] border-l-8 border-purple-500 relative overflow-hidden group hover:bg-white/5 transition-colors shadow-2xl">
-                                                 <div className="absolute top-0 right-0 w-80 h-80 bg-purple-500/10 rounded-full blur-[100px] group-hover:bg-purple-500/20 transition-colors"></div>
-                                                <div className="relative z-10"><div className="flex justify-between items-start mb-10"><div><h3 className="text-5xl font-bold text-white tracking-tight">Support Network</h3><p className="text-slate-400 text-sm mt-4 font-mono tracking-widest uppercase">Helpline: 1091</p></div><div className="p-6 bg-purple-500/20 rounded-3xl"><Icons.Heart className="w-12 h-12 text-purple-500" /></div></div><button className="shimmer w-full bg-gradient-to-r from-purple-600 to-purple-800 hover:from-purple-500 hover:to-purple-700 text-white py-8 rounded-3xl font-black text-2xl shadow-[0_0_50px_rgba(147,51,234,0.4)] flex items-center justify-center gap-5 transition-all hover:scale-[1.02] active:scale-95"><Icons.Phone className="w-8 h-8" /> CONTACT SUPPORT</button></div>
+
+                                            {/* Support Network Card */}
+                                            <div className="glass-panel p-10 rounded-[2.5rem] border border-white/10 relative overflow-hidden group hover:border-purple-500/50 transition-all duration-300">
+                                                <div className="absolute inset-0 bg-purple-500/5 group-hover:bg-purple-500/10 transition-colors"></div>
+                                                <div className="relative z-10">
+                                                    <div className="flex justify-between items-start mb-8">
+                                                        <div>
+                                                            <h3 className="text-4xl font-bold text-white tracking-tight">Support Network</h3>
+                                                            <p className="text-purple-400 text-sm mt-2 font-mono tracking-widest uppercase font-bold">Helpline: 1091</p>
+                                                        </div>
+                                                        <div className="p-5 bg-purple-500/20 rounded-2xl border border-purple-500/30 shadow-[0_0_15px_rgba(168,85,247,0.3)]">
+                                                            <Icons.Heart className="w-10 h-10 text-purple-500" />
+                                                        </div>
+                                                    </div>
+                                                    <button className="w-full py-6 rounded-2xl bg-gradient-to-r from-purple-600 to-purple-700 hover:from-purple-500 hover:to-purple-600 text-white font-black text-xl shadow-lg shadow-purple-900/40 flex items-center justify-center gap-4 transition-all hover:scale-[1.02] active:scale-95">
+                                                        <Icons.Phone className="w-6 h-6" /> 
+                                                        <span>CONTACT SUPPORT</span>
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
                                         <div className="h-full"><ChatInterface userId={user.id} /></div>
