--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
                                 <div className="max-w-7xl mx-auto px-6 py-10 w-full min-h-[85vh] grid grid-cols-1 lg:grid-cols-3 gap-8">
                                     
                                     {/* Quick Actions Panel - NOW EQUAL HEIGHT */}
-                                    <div className="glass-card rounded-[2.5rem] lg:col-span-1 p-8 h-[700px] lg:h-auto border border-white/10 shadow-2xl relative flex flex-col justify-between">
+                                    <div className="glass-card rounded-[2.5rem] lg:col-span-1 p-8 h-[700px] border border-white/10 shadow-2xl relative flex flex-col justify-between">
                                         <div className="absolute inset-0 bg-gradient-to-b from-purple-500/5 to-transparent pointer-events-none"></div>
                                         
                                         <div className="relative z-10">
